--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Venture</title>
     <link rel="stylesheet" href="./style/index.css" />
   </head>
   <body>
@@ -98,8 +98,8 @@
             emas. Biz tayyor reja emas, rost fikrni kutamiz.
           </h1>
         </div>
-        <div class="fedbek-btn">
-          <a href="/"
+        <div>
+          <a class="fedbek-btn" href="/"
             >Ariza yuborish <img src="./img/feedbek_btn.svg" alt=""
           /></a>
         </div>
@@ -205,15 +205,15 @@
           </div>
           <div class="mini_titles">
             <div class="text_mini">
-              <p>01</p>
+              <p>02</p>
               <hr />
-              <h4>SheStars</h4>
+              <h4>Startup Arena</h4>
             </div>
             <hr />
             <div class="text_mini_bottom">
               <p>
-                Ayollar uchun platforma. Startap qilgan ayollar o‘z tajribalari
-                bilan o‘rtoqlashadi.
+                Pitch va Investitsiya kuni. Yoshlar o‘z loyihalarini investorlar
+                oldida taqdim etadi.
               </p>
               <a href=""
                 >Barchasini O'qish <img src="./img/icon_drection.svg" alt=""
@@ -223,15 +223,15 @@
 
           <div class="mini_titles">
             <div class="text_mini">
-              <p>01</p>
+              <p>03</p>
               <hr />
-              <h4>SheStars</h4>
+              <h4>StartupTalks</h4>
             </div>
             <hr />
             <div class="text_mini_bottom">
               <p>
-                Ayollar uchun platforma. Startap qilgan ayollar o‘z tajribalari
-                bilan o‘rtoqlashadi.
+                Pitch va Investitsiya kuni. Yoshlar o‘z loyihalarini investorlar
+                oldida taqdim etadi.
               </p>
               <a href=""
                 >Barchasini O'qish <img src="./img/icon_drection.svg" alt=""
@@ -304,12 +304,157 @@
         </div>
         <p>Har bir katta g‘oya — kichik ishonchdan boshlanadi</p>
         <iframe
-          src="https://www.youtube.com/embed/VIDEO_ID"
+          width=""
+          height="415"
+          class="youtube"
+          src="https://www.youtube.com/embed/8ZGJj6FzKdU?si=nW3XsGKY66cyroAG"
           title="YouTube video player"
           frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
         ></iframe>
+        <div class="youtube_icon">
+          <a href="https://t.me/qosimjon_1">
+            <img src="./img/youtube_tg.svg" alt=""
+          /></a>
+          <a href="https://instagram.com/qosimjon_1">
+            <img src="./img/youtube_insta.svg" alt=""
+          /></a>
+          <a href="https://www.youtube.com/@KhumoyunCodes">
+            <img src="./img/youtube_youtube.svg" alt=""
+          /></a>
+        </div>
+      </div>
+      <!-- /////////////////////////// -->
+      <div class="main-logotipizim container">
+        <div class="main_logopitizm_fa">
+          <img class="main_logotipizm_img" src="./img/logotipizm.svg" alt="" />
+          <div class="main_logopitizim_text">
+            <hr />
+            <p>
+              Logotipimizdagi
+              <img class="logotipizm" src="./img/logotipizm.svg" alt="" /> harfi
+              — bu qush. Sababi har bir g‘oya uchishni xohlaydi. Sizga faqat
+              ozgina ishonch va yo‘l ko‘rsatuvchi kerak — biz aynan shunday
+              qanot bo‘lamiz.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- //////////////////////// -->
+      <div class="main-teachers container">
+        <div class="techers_cards">
+          <div class="teacher_card">
+            <img src="./img/abror.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card">
+            <img src="./img/husinidin.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card">
+            <img src="./img/aleksandr_qix.svg" alt="/" />
+            <p>Aleksandr Mirovskiy</p>
+          </div>
+
+          <div class="teacher_card">
+            <img src="./img/aleksandr.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card">
+            <img src="./img/aleksandr22.svg" alt="/" />
+            <p>Aleksandr Mirovskiy</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="mian-techers-mini">
+        <div class="techers_cards_mini">
+          <div class="teacher_card_mini">
+            <img src="./img/abror.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/husinidin.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/aleksandr_qix.svg" alt="/" />
+            <p>Aleksandr Mirovskiy</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/aleksandr.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/aleksandr22.svg" alt="/" />
+            <p>Aleksandr Mirovskiy</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/abror.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/husinidin.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/aleksandr_qix.svg" alt="/" />
+            <p>Aleksandr Mirovskiy</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/aleksandr.svg" alt="/" />
+            <p>Abrorbek Ibrohimov</p>
+          </div>
+
+          <div class="teacher_card_mini">
+            <img src="./img/aleksandr22.svg" alt="/" />
+            <p>Aleksandr Mirovskiy</p>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////// -->
+      <div class="main-text-yoshlar container">
+        <div class="main_title_yoshlar">
+          <hr />
+          <h1>
+            Biz <span class="yoshlar">yoshlarga ishonamiz</span> Chunki g‘oya
+            har doim kichik bir ishonchdan boshlanadi
+          </h1>
+        </div>
+        <p>
+          Yoshlar Ventures — bu g‘oyasi bor, lekin tayyor mahsuloti hali yo‘q
+          bo‘lgan yoshlar uchun ochilgan fond. Biz sizni eshitamiz. Sizni
+          qo‘llaymiz. Hukumat, investorlar va soha mutaxassislarini siz bilan
+          bog‘laymiz.
+        </p>
+      </div>
+      <!-- ///////////////////////////////// -->
+      <div class="main-end container">
+        <div class="main_end_texts">
+          <div class="end_title">
+            <hr />
+            <h4 class="end_text">
+              "Hali tayyor emasman" deb o'tirganingizda boshqalar g'oyasi uchun
+              investitsiya olyapti. Imkoniyatdan foydalaning!
+            </h4>
+          </div>
+          <a class="ariza_end" href="">
+            Ariza yuborish<img src="./img/feedbek_btn.svg" alt=""
+          /></a>
+        </div>
       </div>
     </main>
 
@@ -358,7 +503,7 @@
           </div>
         </div>
 
-        <div class="footer_map">
+        <div class="footer_map container">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2846.818644361807!2d69.27463137587671!3d41.35215367130437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8cae3ab5871f%3A0x15743fc46216c6e1!2sShakhriston%20Street%2C%20Tashkent%2C%20Uzbekistan!5e1!3m2!1sen!2s!4v1751829046462!5m2!1sen!2s"
             width="499px"
