--- a/pages/eventDetail.html
+++ b/pages/eventDetail.html
@@ -10,20 +10,33 @@
   </head>
   <body>
     <!---------------------------------- header -->
-    <header>
+      <header>
       <nav class="navbar container">
         <a href="/">
           <img src="../img/site_logo.svg" alt="header logo" />
         </a>
-        <ul>
-          <li><a href="/">Asosiy</a></li>
-          <li><a href="/">Biz haqimizda</a></li>
-          <li><a href="../pages/event.html">Tadbirlar</a></li>
-          <li><a href="/">Startuplar(Portfel)</a></li>
-          <li><a href="/">Hamkorlar</a></li>
-          <li><a href="/">Youtube blog</a></li>
-          <li><a href="/">Kontaktlar</a></li>
+        <ul class="nav-menu">
+          <div class="menu-header">
+            <div class="phone_logo">
+              <div class="logo">
+                <img src="../img/site_logo.svg" alt="Logo" />
+              </div>
+              <button class="close-btn">
+                <img src="../img/yopish.svg" alt="Yopish" />
+              </button>
+            </div>
+          </div>
+          <div class="nav_navbar">
+            <li><a href="/" class="active">Asosiy</a></li>
+            <li><a href="/">Biz haqimizda</a></li>
+            <li><a href="../pages/event.html">Tadbirlar</a></li>
+            <li><a href="/">Startuplar(Portfel)</a></li>
+            <li><a href="/">Hamkorlar</a></li>
+            <li><a href="/">Youtube blog</a></li>
+            <li><a href="/">Kontaktlar</a></li>
+          </div>
         </ul>
+
         <select name="" id="">
           <option value="uz">O'zb</option>
           <option value="ru">Ru</option>
