--- a/pages/event.html
+++ b/pages/event.html
@@ -308,5 +308,17 @@
         });
       });
     </script>
+    <script>
+      const btnOpen = document.querySelector(".hamburger-btn");
+      const btnClose = document.querySelector(".close-btn");
+      const menu = document.querySelector(".nav-menu");
+
+      btnOpen.addEventListener("click", () => {
+        menu.classList.add("open");
+      });
+      btnClose.addEventListener("click", () => {
+        menu.classList.remove("open");
+      });
+    </script>
   </body>
 </html>
