--- a/pages/event.html
+++ b/pages/event.html
@@ -150,7 +150,7 @@
               /></a>
             </div>
           </div>
-          <div class="carusel">
+          <div class="carusel"> 
             <button class="carousel-btn prev">←</button>
             <button class="carousel-btn next">→</button>
           </div>
@@ -218,11 +218,11 @@
               </div>
             </div>
           </div>
-          <div class="carusel">
+        </div>
+        <div class="carusel"> 
             <button class="carousel-btn prev">←</button>
             <button class="carousel-btn next">→</button>
           </div>
-        </div>
       </div>
     </main>
     <!------------------------------- footer -->
@@ -294,20 +294,28 @@
         </div>
       </div>
     </footer>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const slider = document.querySelector(".cards_slider");
-        const nextBtn = document.querySelector(".carousel-btn.next");
-        const prevBtn = document.querySelector(".carousel-btn.prev");
+   <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const sliders = document.querySelectorAll(".cards_tadbirlar");
 
-        nextBtn.addEventListener("click", () => {
-          slider.scrollBy({ left: slider.clientWidth, behavior: "smooth" });
-        });
-        prevBtn.addEventListener("click", () => {
-          slider.scrollBy({ left: -slider.clientWidth, behavior: "smooth" });
-        });
+    sliders.forEach((cardsWrapper) => {
+      const slider = cardsWrapper.querySelector(".cards_slider");
+      const nextBtn = cardsWrapper.parentElement.querySelector(".carousel-btn.next");
+      const prevBtn = cardsWrapper.parentElement.querySelector(".carousel-btn.prev");
+
+      if (!slider || !nextBtn || !prevBtn) return;
+
+      nextBtn.addEventListener("click", () => {
+        slider.scrollBy({ left: slider.clientWidth, behavior: "smooth" });
       });
-    </script>
+
+      prevBtn.addEventListener("click", () => {
+        slider.scrollBy({ left: -slider.clientWidth, behavior: "smooth" });
+      });
+    });
+  });
+</script>
+
     <script>
       const btnOpen = document.querySelector(".hamburger-btn");
       const btnClose = document.querySelector(".close-btn");
