--- a/pages/event.html
+++ b/pages/event.html
@@ -317,7 +317,6 @@
         });
       });
     </script>
-
     <script>
       const btnOpen = document.querySelector(".hamburger-btn");
       const btnClose = document.querySelector(".close-btn");
@@ -325,9 +324,12 @@
 
       btnOpen.addEventListener("click", () => {
         menu.classList.add("open");
+        document.body.classList.add("menu-open");
       });
+
       btnClose.addEventListener("click", () => {
         menu.classList.remove("open");
+        document.body.classList.remove("menu-open");
       });
     </script>
   </body>
