--- a/pages/eventDetail.html
+++ b/pages/eventDetail.html
@@ -262,9 +262,12 @@
 
       btnOpen.addEventListener("click", () => {
         menu.classList.add("open");
+        document.body.classList.add("menu-open");
       });
+
       btnClose.addEventListener("click", () => {
         menu.classList.remove("open");
+        document.body.classList.remove("menu-open");
       });
     </script>
   </body>
