--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </div>
       <!-- ////////////////////// -->
       <div class="main_texts container">
-        <hr />
+        <span></span>
         <h1>Bizga ishongan hamkorlarimiz</h1>
       </div>
       <!-- ////////////////////// -->
@@ -203,7 +203,7 @@
           <div class="mini_titles">
             <div class="text_mini">
               <p>01</p>
-              <hr />
+              <span></span>
               <h4>SheStars</h4>
             </div>
             <hr />
@@ -220,10 +220,10 @@
           <div class="mini_titles">
             <div class="text_mini">
               <p>02</p>
-              <hr />
+              <span></span>
               <h4>Startup Arena</h4>
             </div>
-            <hr />
+            <span></span>
             <div class="text_mini_bottom">
               <p>
                 Pitch va Investitsiya kuni. Yoshlar o‘z loyihalarini investorlar
@@ -238,10 +238,10 @@
           <div class="mini_titles">
             <div class="text_mini">
               <p>03</p>
-              <hr />
+              <span></span>
               <h4>StartupTalks</h4>
             </div>
-            <hr />
+            <span></span>
             <div class="text_mini_bottom">
               <p>
                 Pitch va Investitsiya kuni. Yoshlar o‘z loyihalarini investorlar
@@ -260,11 +260,11 @@
       <!-- ////////////////////// -->
       <div class="main-ideas container">
         <div class="main_ideas_text">
-          <hr />
+          <span></span>
           <h1>Biz ishongan g‘oyalar — hozir kompaniyaga aylangan</h1>
         </div>
         <div class="main_text_content">
-          <hr />
+          <span></span>
           <div class="main_text_content_title">
             <p>Eng yaxshi loyihalar ideal holatda tug‘ilmaydi</p>
             <p>Aksincha, hech narsasiz boshlanganlar eng uzoqqa boradi.</p>
@@ -279,41 +279,58 @@
       <!-- /////////////////////// -->
       <div class="main-partners">
         <div class="partners_top">
-          <div class="slider">
-            <img src="./img/labsearch.svg" alt="" />
-            <img src="./img/famir.svg" alt="" />
-            <img src="./img/simidan.svg" alt="" />
-            <img src="./img/ururur.svg" alt="" />
-            <img src="./img/ebay.svg" alt="" />
-            <img src="./img/labsearch.svg" alt="" />
-            <img src="./img/famir.svg" alt="" />
-            <img src="./img/simidan.svg" alt="" />
-            <img src="./img/ururur.svg" alt="" />
-            <img src="./img/ebay.svg" alt="" />
+          <div class="slider-wrap">
+            <div class="slider">
+              <img src="./img/labsearch.svg" alt="Labsearch" />
+              <img src="./img/famir.svg" alt="Famir" />
+              <img src="./img/simidan.svg" alt="Simidan" />
+              <img src="./img/ururur.svg" alt="Ururur" />
+              <img src="./img/ebay.svg" alt="eBay" />
+              <img src="./img/labsearch.svg" alt="Labsearch" />
+              <img src="./img/famir.svg" alt="Famir" />
+              <img src="./img/simidan.svg" alt="Simidan" />
+              <img src="./img/ururur.svg" alt="Ururur" />
+              <img src="./img/ebay.svg" alt="eBay" />
+              <img src="./img/labsearch.svg" alt="Labsearch" />
+              <img src="./img/famir.svg" alt="Famir" />
+              <img src="./img/simidan.svg" alt="Simidan" />
+              <img src="./img/ururur.svg" alt="Ururur" />
+              <img src="./img/ebay.svg" alt="eBay" />
+            </div>
           </div>
         </div>
+
         <div class="partners_bottom">
-          <div class="slider reverse">
-            <img src="./img/labsearch.svg" alt="" />
-            <img src="./img/famir.svg" alt="" />
-            <img src="./img/simidan.svg" alt="" />
-            <img src="./img/ururur.svg" alt="" />
-            <img src="./img/ebay.svg" alt="" />
-            <img src="./img/labsearch.svg" alt="" />
-            <img src="./img/famir.svg" alt="" />
-            <img src="./img/simidan.svg" alt="" />
-            <img src="./img/ururur.svg" alt="" />
-            <img src="./img/ebay.svg" alt="" />
+          <div class="slider-wrap">
+            <div class="slider reverse">
+              <img src="./img/labsearch.svg" alt="Labsearch" />
+              <img src="./img/famir.svg" alt="Famir" />
+              <img src="./img/simidan.svg" alt="Simidan" />
+              <img src="./img/ururur.svg" alt="Ururur" />
+              <img src="./img/ebay.svg" alt="eBay" />
+              <img src="./img/labsearch.svg" alt="Labsearch" />
+              <img src="./img/famir.svg" alt="Famir" />
+              <img src="./img/simidan.svg" alt="Simidan" />
+              <img src="./img/ururur.svg" alt="Ururur" />
+              <img src="./img/ebay.svg" alt="eBay" />
+              <img src="./img/labsearch.svg" alt="Labsearch" />
+              <img src="./img/famir.svg" alt="Famir" />
+              <img src="./img/simidan.svg" alt="Simidan" />
+              <img src="./img/ururur.svg" alt="Ururur" />
+              <img src="./img/ebay.svg" alt="eBay" />
+            </div>
           </div>
         </div>
+
         <a class="parfolio_btn container" href=""
           >Portfel bilan tanishish <img src="./img/lamp.svg" alt=""
         /></a>
       </div>
+
       <!-- /////////////////////// -->
       <div class="main-youtube container">
         <div class="main_youtube_titles">
-          <hr />
+          <span></span>
           <h1>Startaplaringizga birinchi ishonadigan — bizmiz.</h1>
         </div>
         <p>Har bir katta g‘oya — kichik ishonchdan boshlanadi</p>
@@ -345,7 +362,7 @@
         <div class="main_logopitizm_fa">
           <img class="main_logotipizm_img" src="./img/logotipizm.svg" alt="" />
           <div class="main_logopitizim_text">
-            <hr />
+            <span></span>
             <p>
               Logotipimizdagi
               <img class="logotipizm" src="./img/logotipizm.svg" alt="" /> harfi
@@ -442,7 +459,7 @@
       <!-- ///////////////////////////// -->
       <div class="main-text-yoshlar container">
         <div class="main_title_yoshlar">
-          <hr />
+          <span class="yoshlar_hr"></span>
           <h1>
             Biz <span class="yoshlar">yoshlarga ishonamiz</span> Chunki g‘oya
             har doim kichik bir ishonchdan boshlanadi
