--- a/pages/event.html
+++ b/pages/event.html
@@ -51,7 +51,7 @@
     <main>
       <div class="tadbirlar-titles container">
         <div class="tadbirlar_text">
-          <hr />
+          <span></span>
           <h1>Yangi tadbirlar</h1>
         </div>
       </div>
@@ -159,7 +159,7 @@
       <!-- /////////////////////////////////////// -->
       <div class="tadbirlar-titles container">
         <div class="tadbirlar_text2">
-          <hr />
+          <span></span>
           <h1>Avvalgi tadbirlar</h1>
         </div>
       </div>
@@ -219,6 +219,12 @@
             </div>
           </div>
         </div>
+
+        <div class="looooop">
+          <button class="burush_btn prev">←</button>
+          <button class="burush_btn next">→</button>
+        </div>
+
         <div class="carusel">
           <button class="carousel-btn prev">←</button>
           <button class="carousel-btn next">→</button>
