--- a/pages/stage.html
+++ b/pages/stage.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=\, initial-scale=1.0" />
-    <title>EventDetail</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stage</title>
     <link rel="stylesheet" href="../style/index.css" />
-    <link rel="stylesheet" href="../style/event.css" />
-    <link rel="stylesheet" href="../style/eventDetail.css" />
+    <link rel="stylesheet" href="../style/profil.css" />
+    <link rel="stylesheet" href="../style/stage.css" />
   </head>
   <body>
     <!---------------------------------- header -->
@@ -48,132 +48,73 @@
       </nav>
     </header>
 
-    <!-- ---------------------------------- main  -->
-    <main>
-      <div class="even-logo container">
-        <div class="even_img">
-          <img src="../img/even_main.svg" alt="" />
-        </div>
-      </div>
-      <!-- //////////////////////////////////////// -->
-      <div class="tadbirlar-titles container">
-        <div class="tadbirlar_text">
-          <span></span>
-          <h1>Yangi tadbirlar</h1>
-        </div>
-      </div>
-      <!-- /////////////////////////////////////////////// -->
-      <div class="event-titles container">
-        <div class="event-texts">
-          <p>
-            Labsearch – Neyrotexnologiyalarga asoslangan aqlli qidiruv xizmati
-            Labsearch — bu sun’iy intellekt va neyrosetlar asosida ishlaydigan
-            innovatsion qidiruv platformasi. Bizning tizim murakkab algoritmlar
-            yordamida siz izlayotgan mahsulot, xizmat yoki ma’lumotni aniq va
-            tez topishga yordam beradi. <br />
-            Asosiy afzalliklar:
-          </p>
+    <!-- ---------------- main -->
 
-          <ul class="even_ul">
-            <li class="even_li">
-              Aqlli qidiruv: So‘rovlarni kontekst asosida tushunadi va eng
-              dolzarb natijalarni taqdim etadi
+    <main>
+      <div class="main-numbers container">
+        <div class="numbers">
+          <div class="number1"><p class="number_number1">1</p></div>
+          <hr class="number_hr" />
+
+          <div class="number2"><p class="number_number2">2</p></div>
+          <hr class="number_hr" />
+
+          <div class="number3"><p class="number_number3">3</p></div>
+          <hr class="number_hr" />
+
+          <div class="number4"><p class="number_number4">4</p></div>
+          <hr class="number_hr" />
+
+          <div class="number5"><p class="number_number5">5</p></div>
+        </div>
+      </div>
+      <!-- ////////////////////////////////////////////////// -->
+      <div class="main-checkbox container">
+        <div class="checkbox_text">
+          <h4 class="check_tit">Startupingiz xozr qaysi bosqichda?</h4>
+        </div>
+        <!-- ///////////////////////// -->
+        <div class="checkbox">
+          <ul class="checkbox-list">
+            <li>
+              <label class="checkbox-wrapper">
+                <input type="checkbox" />
+                <span class="custom-checkbox"></span>
+                <span class="checkbox-label">G’oya (Idea)</span>
+              </label>
             </li>
-            <li class="even_li">
-              Tezkorlik: Ma’lumotlar bazasi bilan real vaqt rejimida ishlaydi
+            <li>
+              <label class="checkbox-wrapper">
+                <input type="checkbox" />
+                <span class="custom-checkbox"></span>
+                <span class="checkbox-label">MVP ishlab chiqilmoqda</span>
+              </label>
             </li>
-            <li class="even_li">
-              Moslashtirilgan natijalar: Har bir foydalanuvchining ehtiyojiga
-              mos tavsiyalar
-            </li>
-            <li class="even_li">
-              Keng imkoniyatlar: Ilmiy ishlar, mahsulotlar, xizmatlar,
-              kompaniyalar barchasini toping
+            <li>
+              <label class="checkbox-wrapper">
+                <input type="checkbox" />
+                <span class="custom-checkbox"></span>
+                <span class="checkbox-label"
+                  >Post MVP (MVP ishlab chiqilgan)</span
+                >
+              </label>
             </li>
           </ul>
-          <p>
-            Labsearch — bu oddiy qidiruvdan ko‘ra ko‘proq narsa. Bu sizga vaqtni
-            tejash, aniq ma’lumotga ega bo‘lish va qaror qabul qilishni
-            osonlashtiradigan sun’iy intellekt yordamchisidir.
-          </p>
-          <div class="even_button">
-            <a class="ariza-btn" href=""
-              >Ariza Qoldirish <img src="../img/lamp.svg" alt=""
-            /></a>
+        </div>
+        <!-- /////////////////////////// -->
+        <div class="test">
+          <h1 class="test_title">Savdo haqida ma'lumot</h1>
+          <div class="main-trades">
+            <div class="trades_div">
+              <p>Hozirda savdo bormi?</p>
+ 
+            </div>
           </div>
         </div>
+
+        <button class="btn_davom">Davom etish</button>
       </div>
-      <!-- /////////////////////////////////////// -->
-      <div class="tadbirlar-titles container">
-        <div class="tadbirlar_text2">
-          <span></span>
-          <h1>Avvalgi tadbirlar</h1>
-        </div>
-      </div>
-      <!-- /////////////////////////////////////////// -->
-      <div class="main-startup container">
-        <div class="cards_tadbirlar">
-          <div class="cards_slider">
-            <div class="tadbirlar_card2">
-              <img src="../img/sarttup.svg" alt="" />
-              <div class="card2_titles">
-                <h4>Startup Arena</h4>
-                <p>6 iyun, 2025 -yil</p>
-              </div>
-            </div>
-
-            <div class="tadbirlar_card2">
-              <img src="../img/sarttup.svg" alt="" />
-              <div class="card2_titles">
-                <h4>Startup Arena</h4>
-                <p>6 iyun, 2025 -yil</p>
-              </div>
-            </div>
-
-            <div class="tadbirlar_card2">
-              <img src="../img/sarttup.svg" alt="" />
-              <div class="card2_titles">
-                <h4>Startup Arena</h4>
-                <p>6 iyun, 2025 -yil</p>
-              </div>
-            </div>
-
-            <div class="tadbirlar_card2">
-              <img src="../img/sarttup.svg" alt="" />
-              <div class="card2_titles">
-                <h4>Startup Arena</h4>
-                <p>6 iyun, 2025 -yil</p>
-              </div>
-            </div>
-
-            <div class="tadbirlar_card2">
-              <img src="../img/sarttup.svg" alt="" />
-              <div class="card2_titles">
-                <h4>Startup Arena</h4>
-                <p>6 iyun, 2025 -yil</p>
-              </div>
-            </div>
-
-            <div class="tadbirlar_card2">
-              <img src="../img/sarttup.svg" alt="" />
-              <div class="card2_titles">
-                <h4>Startup Arena</h4>
-                <p>6 iyun, 2025 -yil</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="looooop">
-            <button class="burush_btn prev">←</button>
-            <button class="burush_btn next">→</button>
-          </div>
-
-          <div class="carusel">
-            <button class="carousel-btn prev">←</button>
-            <button class="carousel-btn next">→</button>
-          </div>
-        </div>
-      </div>
+      <!-- ////////////////////////////////////////// -->
     </main>
 
     <!------------------------------- footer -->
@@ -245,21 +186,6 @@
         </div>
       </div>
     </footer>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const slider = document.querySelector(".cards_slider");
-        const nextBtn = document.querySelector(".carousel-btn.next");
-        const prevBtn = document.querySelector(".carousel-btn.prev");
-
-        nextBtn.addEventListener("click", () => {
-          slider.scrollBy({ left: slider.clientWidth, behavior: "smooth" });
-        });
-        prevBtn.addEventListener("click", () => {
-          slider.scrollBy({ left: -slider.clientWidth, behavior: "smooth" });
-        });
-      });
-    </script>
     <script>
       const btnOpen = document.querySelector(".hamburger-btn");
       const btnClose = document.querySelector(".close-btn");
